--- a/WebContent/Web-source/css/main-style.css
+++ b/WebContent/Web-source/css/main-style.css
@@ -17,6 +17,14 @@
     --bright-background : #FFF7F0;
     --bright-aside : rgba(255, 188, 174, 0.54);
     --bright-basic-font : #424242;
+    
+    /* 현재 Mode에 대한 색상 저장 */
+    --current-special-font: var(--dark-special-font);
+    --current-background: var(--dark-background);
+    --current-aside: var(--dark-aside);
+    --current-basic-font: var(--dark-basic-font);
+    --current-btn: var(--pastel-skyblue);
+    --current-btn-hover: var(--pastel-blue);
 }
 
 html, body {
@@ -24,12 +32,14 @@ html, body {
 	height: 100%;
 	margin: 0px;
 	padding: 0px;
-	background-color: var(--dark-background);
+	background-color: var(--current-background);
 	display: flex;
 	flex-direction: row;
-	color: var(--dark-basic-font);
+	font-family: 'Nanum Gothic', sans-serif;
+	color: var(--current-basic-font);
 }
 
+/* 전페이지 공통 적용 속성*/
 ul {
 	list-style: none;
 	padding-left: 0px;
@@ -37,7 +47,35 @@ ul {
 
 a {
 	text-decoration: none;
-	color: var(--dark-basic-font);
+	color: var(--current-basic-font);
+}
+
+input {
+	border: none;
+	border-bottom: 1px solid var(--current-basic-font);
+	background-color: #ffffff00;
+	letter-spacing: 2px;
+	color: var(--current-basic-color);
+}
+
+input::placeholder {
+	color: var(--current-basic-font);
+	opacity: 0.7;
+}
+
+input:focus {
+	outline: none;
+	cursor: pointer;
+}
+
+button {
+	border: none;
+	background-color: var(--current-btn);
+}
+
+button:hover {
+	cursor: pointer;
+	background-color: var(--current-btn-hover);
 }
 
 /* Main - .main*/
@@ -105,7 +143,7 @@ a {
     flex-direction: column;
     justify-content: center;
 	padding: 50px;
-	background-color: var(--dark-aside);
+	background-color: var(--current-aside);
 }
 
 .login .title {
@@ -124,28 +162,16 @@ a {
 }
 
 .login .login-form input {
-	background-color: #ffffff00;
-	border: none;
-	border-bottom: 1px solid var(--dark-basic-font);
 	margin-bottom: 70px;
 	padding: 10px 15px;
 	font-size: 20px;
-	letter-spacing: 2px;
-	color: var(--dark-basic-font);	
-}
-
-.login .login-form input::placeholder {
-	color: var(--dark-basic-font);
-}
-
-.login .login-form input:focus {
-	outline: none;
+	letter-spacing: 2px;	
 }
 
 .login .login-form .loginBtn {
 	width: 100%;
 	height: fit-content;
-	background-color: var(--pastel-skyblue);
+	background-color: var(--current-btn);
 	font-size: 20px;
 	padding: 10px 0px; 
 	margin-top: 10px;
@@ -154,13 +180,12 @@ a {
 }
 
 .login .login-form .loginBtn:hover {
-	cursor: pointer;
-	background: var(--pastel-blue);
+	background: var(--current-btn-hover);
 }
 
 .login .register,
 .login .find {
 	font-size: 17px;
 	padding-bottom: 5px;
-	color: var(--dark-special-font);
+	color: var(--current-special-font);
 }
