--- a/WebContent/Web-source/css/write-style.css
+++ b/WebContent/Web-source/css/write-style.css
@@ -36,6 +36,10 @@
 	margin-bottom: 20px;
 }
 
+.write .writing-part #content::-webkit-scrollbar {
+    display: none;
+}
+
 .write .writing-part #content::placeholder {
 	color: var(--current-basic-font);
 	opacity: 0.7;
@@ -74,6 +78,6 @@
 .write .writing-part .sendBtn {
 	width: fit-content;
 	height: fit-content;
-	padding: 5px 20px;
+	padding: 8px 20px;
 	margin-right: 20px;
 }
