--- a/WebContent/Web-source/css/main-style.css
+++ b/WebContent/Web-source/css/main-style.css
@@ -1,19 +1,19 @@
 @charset "EUC-KR";
 :root {
-	/* 기본 button 색상 */
-	--pastel-red : #E2B49A;
-	--pastel-yellow : #E9C87B;
-	--pastel-skyblue : #C3D3E0;
-	--pastel-blue : #9BABB8;
-	
-	/* Dark Mode일 때, 사용할 색상 */
-	--dark-special-font : #E5E5E5;
-	--dark-background : #6B829D;
-	--dark-aside : rgba(56, 91, 111, 0.54);
-	--dark-basic-font : #FFFFFF;
-	
-	/* Bright Mode일 때, 사용할 색상 */
-	--bright-special-font : #9D9D9D;
+    /* 기본 button 색상 */
+    --pastel-red : #E2B49A;
+    --pastel-yellow : #E9C87B;
+    --pastel-skyblue : #C3D3E0;
+    --pastel-blue : #9BABB8;
+    
+    /* Dark Mode일 때, 사용할 색상 */
+    --dark-special-font : #E5E5E5;
+    --dark-background : #6B829D;
+    --dark-aside : rgba(56, 91, 111, 0.54);
+    --dark-basic-font : #FFFFFF;
+    
+    /* Bright Mode일 때, 사용할 색상 */
+    --bright-special-font : #9D9D9D;
     --bright-background : #FFF7F0;
     --bright-aside : rgba(255, 188, 174, 0.54);
     --bright-basic-font : #424242;
@@ -28,54 +28,54 @@
 }
 
 html, body {
-	width: 100%;
-	height: 100%;
-	margin: 0px;
-	padding: 0px;
-	background-color: var(--current-background);
-	display: flex;
-	flex-direction: row;
-	font-family: 'Noto Sans KR', sans-serif;
-	color: var(--current-basic-font);
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    background-color: var(--current-background);
+    display: flex;
+    flex-direction: row;
+    font-family: 'Noto Sans KR', sans-serif;
+    color: var(--current-basic-font);
 }
 
 /* 전페이지 공통 적용 속성*/
 ul {
-	list-style: none;
-	padding-left: 0px;
+    list-style: none;
+    padding-left: 0px;
 }
 
 a {
-	text-decoration: none;
-	color: var(--current-basic-font);
+    text-decoration: none;
+    color: var(--current-basic-font);
 }
 
 input {
-	border: none;
-	border-bottom: 1px solid var(--current-basic-font);
-	background-color: #ffffff00;
-	letter-spacing: 2px;
-	color: var(--current-basic-color);
+    border: none;
+    border-bottom: 1px solid var(--current-basic-font);
+    background-color: #ffffff00;
+    letter-spacing: 2px;
+    color: var(--current-basic-color);
 }
 
 input::placeholder {
-	color: var(--current-basic-font);
-	opacity: 0.7;
+    color: var(--current-basic-font);
+    opacity: 0.7;
 }
 
 input:focus {
-	outline: none;
-	cursor: pointer;
+    outline: none;
+    cursor: pointer;
 }
 
 button {
-	border: none;
-	background-color: var(--current-btn);
+    border: none;
+    background-color: var(--current-btn);
 }
 
 button:hover {
-	cursor: pointer;
-	background-color: var(--current-btn-hover);
+    cursor: pointer;
+    background-color: var(--current-btn-hover);
 }
 
 .set-margin {
@@ -86,40 +86,40 @@ button:hover {
 
 /* Main - .main*/
 .main {
-	width: 80%;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+    width: 80%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .main .web-title {
-	font-weight: bold;
-	font-size: 40px;
+    font-weight: bold;
+    font-size: 40px;
 }
 .main .comment {
-	font-size: 20px;
-	text-align: center;
+    font-size: 20px;
+    text-align: center;
 }
 
 .main .service-list {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .main .service-list .menu {
-	width: 600px;
-	height: fit-content;
-	font-size: 25px;
-	border-radius: 7px;
-	margin-bottom: 20px;
+    width: 600px;
+    height: fit-content;
+    font-size: 25px;
+    border-radius: 7px;
+    margin-bottom: 20px;
 }
 
 .main .service-list .menu.first {
-	background-color: var(--pastel-red);
+    background-color: var(--pastel-red);
 }
 
 .main .service-list .menu.second {
@@ -137,61 +137,71 @@ button:hover {
 .main .service-list .menu a{
     display: block;
     padding: 20px;
-	max-width: 100%;
-	max-height: 100%;
-	color: black;
+    max-width: 100%;
+    max-height: 100%;
+    color: black;
 }
 
 .login {
-	width: 17%;
-	max-height: 100%;
-	display: flex;
+    width: 17%;
+    max-height: 100%;
+    display: flex;
     flex-direction: column;
     justify-content: center;
-	padding: 50px;
-	background-color: var(--current-aside);
+    padding: 50px;
+    background-color: var(--current-aside);
 }
 
 .login .title {
-	font-size: 40px;
-	font-weight: bold;
-	text-align: center;
-	margin-bottom: 100px;
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 100px;
 }
 
 .login .login-form {
-	width: 100%;
-	height: fit-content;
-	display: flex;
-	flex-direction: column;
-	algin-items: center;
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    algin-items: center;
 }
 
 .login .login-form input {
-	margin-bottom: 70px;
-	padding: 10px 15px;
-	font-size: 20px;
-	letter-spacing: 2px;	
+    margin-bottom: 70px;
+    padding: 10px 15px;
+    font-size: 20px;
+    letter-spacing: 2px;    
 }
 
 .login .login-form .loginBtn {
-	width: 100%;
-	height: fit-content;
-	background-color: var(--current-btn);
-	font-size: 20px;
-	padding: 10px 0px; 
-	margin-top: 10px;
-	margin-bottom: 15px;
-	border: none;
+    width: 100%;
+    height: fit-content;
+    background-color: var(--current-btn);
+    font-size: 20px;
+    padding: 10px 0px; 
+    margin-top: 10px;
+    margin-bottom: 15px;
+    border: none;
 }
 
 .login .login-form .loginBtn:hover {
-	background: var(--current-btn-hover);
+    background: var(--current-btn-hover);
 }
 
 .login .register,
 .login .find {
-	font-size: 17px;
-	padding-bottom: 5px;
-	color: var(--current-special-font);
+    font-size: 17px;
+    padding-bottom: 5px;
+    color: var(--current-special-font);
+}
+
+.logout-form {
+    width: 100%;
+    height: fit-content;
+}
+
+.logout-form .comment {
+    font-size: 30px;
+    font-weight: bold;
 }
