--- a/WebContent/Web-source/css/aside-style.css
+++ b/WebContent/Web-source/css/aside-style.css
@@ -14,7 +14,7 @@
     width: 100%;
     height: fit-content;
     font-size: 40px;
-    font-weight: bold;
+    font-weight: 500;
     text-align: center;
     margin-bottom: 35px;
 }
@@ -26,7 +26,7 @@
 .left-aside .menu .subtitle {
     max-width: 100%;
     font-size: 20px;
-    font-weight: bold;
+    font-weight: 500;
     padding: 15px 0px 15px 20px;
     border-bottom: 1px solid var(--current-basic-font);
 }
