--- a/WebContent/Web-source/css/commu-list-style.css
+++ b/WebContent/Web-source/css/commu-list-style.css
@@ -4,7 +4,7 @@
     width: 100%;
     height: fit-content;
     font-size: 30px;
-    font-weight: bold;
+    font-weight: 500;
     margin-bottom: 30px;
 }
 
@@ -92,7 +92,7 @@
 .commu-list .list .writing .title {
     display: block;
     font-size: 17px;
-    font-weight: bold;
+    font-weight: 500;
     margin-bottom: 10px;
 }
 
