--- a/WebContent/Web-source/css/modify-style.css
+++ b/WebContent/Web-source/css/modify-style.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: fit-content;
     font-size: 30px;
-    font-weight: bold;
+    font-weight: 500;
     margin-bottom: 40px;
 }
 
