--- a/WebContent/Web-source/css/question-list-style.css
+++ b/WebContent/Web-source/css/question-list-style.css
@@ -4,7 +4,7 @@
     width: 100%;
     height: fit-content;
     font-size: 30px;
-    font-weight: bold;
+    font-weight: 500;
     margin-bottom: 20px;
 }
 
@@ -100,7 +100,7 @@
 .question .list .writing .title {
     display: block;
     font-size: 17px;
-    font-weight: bold;
+    font-weight: 500;
     margin-bottom: 10px;
 }
 
