--- a/WebContent/Web-source/css/user-info-style.css
+++ b/WebContent/Web-source/css/user-info-style.css
@@ -16,7 +16,7 @@ html, body {
 /* 회원가입 */
 .register .title {
 	font-size: 48px;
-	font-weight: bold;
+	font-weight: 500;
 	margin-bottom: 15px;
 }
 
@@ -64,7 +64,7 @@ html, body {
 /* ID / 비밀번호 찾기 */
 .find .title {
 	font-size: 48px;
-	font-weight: bold;
+	font-weight: 500;
     text-align: center;
     margin-bottom: 80px;
 }
