--- a/WebContent/Web-source/calendar/calendar-style.css
+++ b/WebContent/Web-source/calendar/calendar-style.css
@@ -5,12 +5,16 @@
   padding: 0;
 }
 
-#calendarForm {
+.calendar {
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+    align-items: flex-start;
+}
+
+#calendarForm {
+    width: fit-content;
+    height: fit-content;
 }
 
 .custom_calendar_table {
@@ -33,8 +37,10 @@
 
 .custom_calendar_table .cal_date td {
     vertical-align: baseline;
-    padding-left: 9px;
-    padding-top: 3px;
+    padding: 3px 9px;
+    width: 104px;
+    height: 104px;
+    word-break: break-all;
 }
 
 .custom-calendar_table .cal_week td:nth-child(7),
@@ -71,20 +77,20 @@
   background-color: #288CFF;
 }
 
-.custom_calendar_table tbody td {
-  cursor: pointer;
-}
-
 .custom_calendar_table tbody td:nth-child(1) {
   color: red;
 }
 
 .custom_calendar_table tbody td:nth-child(7) {
-  color: #288CFF;
   border-right: none;
 }
 
 .custom_calendar_table tbody td.select_day {
   background-color: #288CFF;
   color: #fff;
+}
+
+.custom_calendar_table tbody .single-date > div{
+    background-color: var(--pastel-yellow);
+    border-radius: 4px;
 }
