--- a/WebContent/Web-source/css/main-style.css
+++ b/WebContent/Web-source/css/main-style.css
@@ -85,7 +85,7 @@ button:hover {
     width: 80%;
     max-height: 100%;
     padding: 100px 100px 50px 100px;
-    font-weight: 100;
+    font-weight: 300;
 }
 
 /* Main - .main*/
@@ -164,18 +164,18 @@ button:hover {
 }
 
 .login .login-form {
-    width: 100%;
+    max-width: 100%;
     height: fit-content;
     display: flex;
     flex-direction: column;
-    algin-items: center;
 }
 
 .login .login-form input {
+    width: 100%;
     margin-bottom: 70px;
-    padding: 10px 15px;
+    padding: 10px 0px;
     font-size: 20px;
-    letter-spacing: 2px;    
+    letter-spacing: 2px;
 }
 
 .login .login-form .loginBtn {
@@ -194,11 +194,11 @@ button:hover {
 }
 
 .login .login-form > div {
-	width: 100%;
-	height: fit-content;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .login .register,
