--- a/WebContent/Web-source/css/scrap-commu-style.css
+++ b/WebContent/Web-source/css/scrap-commu-style.css
@@ -57,7 +57,7 @@
 
 .scrap-commu-list .list {
     width: 100%;
-    height: 82%;
+    height: 75%;
     overflow-y: scroll;
 }
 
@@ -72,8 +72,9 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-end;
-    padding: 10px 20px; 
+    padding: 10px 20px;
     border-top: 1px solid var(--current-basic-font);
+    position: relative;
 }
 
 .scrap-commu-list .list .items .url {
@@ -129,5 +130,7 @@
 }
 
 .scrap-commu-list .items .date {
-	font-size: 13px;
+    font-size: 13px;
+    position: absolute;
+    right: 0px;
 }
