--- a/WebContent/Web-source/css/commu-list-style.css
+++ b/WebContent/Web-source/css/commu-list-style.css
@@ -37,9 +37,11 @@
     background-color: #ffffff00;
     padding: 5px 10px;
     color: var(--current-basic-font);
+    cursor: pointer;
 }
 
-.commu-list #sort-standard:focus {
+.commu-list #sort-standard:focus,
+.commu-list #sub-category:focus {
     outline: none;
 }
 
